--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Additional directories and files to ignore
+node_modules/
+.env
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
