--- a/node-js-app/package.json
+++ b/node-js-app/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-secrets-manager": "^3.430.0",
     "aws-sdk": "^2.1475.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^6.9.6"
   }
